# ptp

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Readme.md  build.sh  clean.sh  deploy_ctl.sh  docker-entrypoint.py  docker.sh  make-android  ptp  ptp-ctl.sh  ptp-server.sh  ptp_server
src/base/ptp_global/: BaseSocket.h  CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  Helpers.h  ImConn.cpp  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  Logger.h  NetLib.cpp  NetLib.h  ServInfo.h  SocketClient.cpp  SocketClient.h  Task.h  Thread.h  ThreadPool.cpp  ThreadPool.h  TokenValidator.cpp  (+6 more)
src/ptp_business/: CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  HttpClient.cpp  HttpClient.h
src/ptp_common/: AesSimple.cpp  BaseSocket.cpp  CMakeLists.txt  EventDispatch.cpp  FileLog.cpp  ImPduBase.cpp  Lock.cpp  Lock.h  Logger.cpp  ServInfo.cpp  UtilPdu.cpp  im_conn_util.cpp  im_conn_util.h  imconn.cpp  impdu.h  netlib.cpp  netlib.h  socket_client.cpp  socket_client.h  util.cpp
src/ptp_crypto/: AesSimple.cpp  AesSimple.h  Base64Utils.cpp  CMakeLists.txt  PCGRand.h  aes_encryption.cpp  aes_encryption.h  base58.cpp  bignum.cpp  bignum.h  crypto_helpers.cpp  crypto_helpers.h  crypto_secp256k1.cpp  crypto_secp256k1.h  ecdsa.cpp  ecdsa.h  hasher.cpp  hasher.h  hmac_sha512.cpp  hmac_sha512.h  keccak.cpp  md5.cpp  memzero.cpp  pbkdf2.cpp  pbkdf2.h  ptp_helpers.cpp  ptp_helpers.h  rand.cpp  ripemd160.cpp  secp256k1.cpp  secp256k1_helpers.cpp  secp256k1_helpers.h  sha2.cpp  sha256.cpp  sha256.h  sha512.cpp
src/ptp_global/: AttachData.cpp  AttachData.h  Base64.cpp  Base64.h  Base64Utils.h  BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EventDispatch.cpp  EventDispatch.h  FileLog.cpp  Helpers.cpp  Helpers.h  HttpClient.cpp  HttpParser.cpp  HttpParserWrapper.cpp  HttpParserWrapper.h  IPParser.cpp  IPParser.h  ImConn.h  ImConnUtil.cpp  ImConnUtil.h  ImConnUtils.cpp  ImPduBase.cpp  ImPduBase.h  Logger.cpp  Logger.h  NetLib.cpp  ServInfo.cpp  ServInfo.h  Singleton.h  SocketClient.cpp  SocketClient.h  Thread.cpp  ThreadPool.cpp  Timer.h  (+14 more)
src/ptp_net/: AccountManager.cpp  AccountManager.h  BuffersStorage.cpp  ByteArray.cpp  CMakeLists.txt  ClientConn.cpp  ClientConn.h  Config.cpp  Defines.h  MsgConn.cpp  MsgConnManager.cpp  NativeByteBuffer.cpp  NativeByteBuffer.h
src/ptp_protobuf/: ActionCommands.h  CMakeLists.txt  IM.BaseDefine.pb.cc  IM.Message.pb.cc  ImPdu.cpp  ImPdu.h  PB.Command.Auth.pb.cc  PB.Command.Auth.pb.h  PB.Command.File.pb.cc  PB.Command.File.pb.h  PB.Command.Other.pb.cc  PB.Command.Other.pb.h  PB.Global.pb.cc  PB.Group.pb.cc  PB.Group.pb.h  PB.Msg.pb.h  PB.User.pb.h  PBGroup.pb.cc  PBGroup.pb.h  PBMsg.pb.cc  PBMsg.pb.h  PBUser.pb.cc  PBUser.pb.h  PTP.Auth.pb.cc  PTP.Auth.pb.h  PTP.Buddy.pb.cc  PTP.Buddy.pb.h  PTP.Common.pb.cc  PTP.Common.pb.h  PTP.Group.pb.cc  PTP.Group.pb.h  PTP.Msg.pb.cc  PTP.Msg.pb.h  PTP.Other.pb.cc  PTP.Other.pb.h  PTP.Server.pb.cc  PTP.Server.pb.h  PTP.Switch.pb.cc  PTP.Switch.pb.h
src/ptp_server/: AutoPool.h  BusinessClientConn.cpp  BusinessClientConn.h  BusinessSrvConn.cpp  BusinessSrvConn.h  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  FileConfig.cpp  FileConfig.h  HandlerMap.cpp  ImUser.cpp  ImUser.h  MsgSrvConn.cpp  MsgSrvConn.h  ProxyTask.cpp  ProxyTask.h  Request.cpp  Request.h  Response.cpp  Response.h  SyncCenter.cpp  SyncCenter.h  define.h  log4cxx.properties  main.cpp
src/ptp_server_login/: CMakeLists.txt  log4cxx.properties  main.cpp
src/ptp_server_msg/: CMakeLists.txt  HandlerMap.cpp  HandlerMap.h  ImUser.cpp  ImUser.h  MsgSrvConn.cpp  MsgSrvConn.h  Request.cpp  Request.h  log4cxx.properties  main.cpp
src/ptp_server_push/: CMakeLists.txt  boot_push.cpp  boot_push.h  byte_stream.cpp  byte_stream.h  log4cxx.properties  main.cpp  push_app.cpp  push_server.h  push_session_handler.cpp  session_manager.cpp
src/ptp_servers/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  boot.cpp  boot.h
src/ptp_toolbox/: CMakeLists.txt  data.hpp  io.cpp  log.cpp  strings.cpp  strings.hpp  term.cpp  time_profiler.cpp  time_profiler.h
src/ptp_wallet/: CMakeLists.txt  HDKey.cpp  HDKey.h  MnemonicHelper.cpp  MnemonicHelper.h  bip39.cpp  bip39.h  mnemonic.cpp  mnemonic.h  utils.cpp  utils.h  wallet.h
src/tests/: CMakeLists.txt  log4cxx.properties  test_aes_gcm.cpp  test_business.cpp  test_cachepool.cpp  test_common.cpp  test_crypto.cpp  test_dbpool.cpp  test_global.cpp  test_global_SocketClient.cpp  test_helpers.cpp  test_net.cpp  test_net_utils.cpp  test_protobuf.cpp  test_secp256k1.cpp  test_server_login.cpp  test_server_msfs.cpp  test_server_msg.cpp  test_server_route.cpp  test_slog.cpp  test_tgnet.cpp  test_toolbox.cpp  test_upload.cpp  test_utils.cpp  test_wallet.cpp
src/tgnet/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  Connection.cpp  Connection.h  ConnectionSocket.cpp  ConnectionsManager.cpp  ConnectionsManager.h  Datacenter.cpp  Defines.h  FileLog.cpp  FileLog.h  Handshake.cpp  NativeByteBuffer.cpp  NativeByteBuffer.h
src/tools/: CMakeLists.txt  daeml  ptp.sh  ptp_server.sh
tests/: CMakeLists.txt  log4cxx.nostdout.properties  log4cxx.properties  test_init.cpp  test_init.h
tests/test_blank/: CMakeLists.txt  test_blank.cpp
tests/test_crypto/: CMakeLists.txt  test_aes_gcm.cpp  test_crypto.cpp  test_secp256k1.cpp
tests/test_global/: CMakeLists.txt  test_curl.cpp  test_global.cpp  test_log.cpp  test_slog.cpp  test_socket_client.cpp  test_uri.cpp
tests/test_net/: CMakeLists.txt  test_net.cpp
tests/test_protobuf/: CMakeLists.txt  test_protobuf.cpp
tests/test_server/: CMakeLists.txt  test_cachepool.cpp  test_config.cpp  test_dbpool.cpp  test_msfs.cpp  test_request.cpp  test_server.cpp  test_utils.cpp
tests/test_server_business/: CMakeLists.txt  test_server_business.cpp
tests/test_server_msg/: CMakeLists.txt  test_server_msg.cpp
tests/test_slog/: CMakeLists.txt  main.cpp
tests/test_toolbox/: CMakeLists.txt
tests/test_wallet/: CMakeLists.txt  test_wallet.cpp
(+754 files in other folders)
