set(LIB_NAME_MAIN ptp_business)
MESSAGE( STATUS ===>>> ${LIB_NAME_MAIN} )
AUX_SOURCE_DIRECTORY(. SRC_LIST)
#AUX_SOURCE_DIRECTORY(./business SRC_LIST)
AUX_SOURCE_DIRECTORY(./models SRC_LIST)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../)
INCLUDE_DIRECTORIES(../ptp_protobuf)
INCLUDE_DIRECTORIES(../../include)

SET(LIBRARY_OUTPUT_PATH ../../lib)

set(COMMON_LIBS pthread mysqlclient_r hiredis curl slog crypto secp256k1)

add_library(${LIB_NAME_MAIN} STATIC ${SRC_LIST})

TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN} ${COMMON_LIBS} ptp_global ptp_protobuf)

