set(LIB_NAME_MAIN ptp_global)
MESSAGE( STATUS ===>>> ${LIB_NAME_MAIN} )
AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES(../)
INCLUDE_DIRECTORIES(../../include)

if(ANDROID)
    SET(LIBRARY_OUTPUT_PATH  ../../lib)
endif()

add_library(${LIB_NAME_MAIN} STATIC ${SRC_LIST})

if(NOT ANDROID)
    TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN} slog)
else()
    TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN} tgnet)
endif()

