cmake_minimum_required(VERSION 2.8.12)
if(COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
set(LIB_NAME_MAIN ptp_server_login)
project(${LIB_NAME_MAIN})
MESSAGE( STATUS ===>>> ${LIB_NAME_MAIN} )

ADD_EXECUTABLE(${LIB_NAME_MAIN} main.cpp)
TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN} ptp_server ptp_global)
