set(LIB_NAME_MAIN ptp_server_msg)
MESSAGE( STATUS ===>>> ${LIB_NAME_MAIN} )

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../ptp_protobuf/)
SET(EXECUTABLE_OUTPUT_PATH  ../../bin/${LIB_NAME_MAIN})
file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
file(COPY log4cxx.properties
        DESTINATION ${EXECUTABLE_OUTPUT_PATH})

set(COMMON_LIBS pthread slog ptp_global ptp_crypto ptp_protobuf ptp_wallet ptp_business)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./actions SRC_LIST)
AUX_SOURCE_DIRECTORY(./models SRC_LIST)
AUX_SOURCE_DIRECTORY(./services SRC_LIST)

add_library(${LIB_NAME_MAIN} STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN} ${COMMON_LIBS})

ADD_EXECUTABLE(${LIB_NAME_MAIN}.app main.cpp)
TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN}.app ${LIB_NAME_MAIN})



