INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(./data)
INCLUDE_DIRECTORIES(./strings)

INCLUDE_DIRECTORIES(../)

SET(LIBRARY_OUTPUT_PATH ../../lib)
LINK_DIRECTORIES(../../lib)

set(LIB_NAME_MAIN ptp_toolbox)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./data SRC_LIST)
AUX_SOURCE_DIRECTORY(./strings SRC_LIST)
add_library(${LIB_NAME_MAIN} STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN})
