INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../)
INCLUDE_DIRECTORIES(./data)
INCLUDE_DIRECTORIES(./strings)
if(ANDROID)
    SET(LIBRARY_OUTPUT_PATH  ../../lib)
    LINK_DIRECTORIES(../../lib)
else()
    SET(LIBRARY_OUTPUT_PATH ../../build/lib)
    LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
endif()
set(LIB_NAME_MAIN ptp_toolbox)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./data SRC_LIST)
AUX_SOURCE_DIRECTORY(./strings SRC_LIST)
add_library(${LIB_NAME_MAIN} STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN})
